Add button with modal logic to take input from user from 0 to 100

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
     
 <body>
+    <div class="topper">
+        <button id="btn">Grid settings</button>
+    </div>
+    <div>
+        <p class="alert"></p>
+    </div>
     <div class="container">
 
     </div>
