--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <div>
         <p class="alert"></p>
     </div>
-    <div class="container">
+    <div class="work-line">
+        <div class="container">
 
+        </div>
     </div>
+
 </body>
 </html>
